--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -127,7 +127,21 @@
 	z-index: 6;
 }
 
-.widget-items-container a {
+.widget-items-container .widget-item-btn {
 	display: inline-block;
 	margin-right: 12px;
+	background: rgba(122, 208, 58, 1);
+	-webkit-border-radius: 2px; 
+	-moz-border-radius: 2px; 
+	border-radius: 2px;
+	padding: 2px 5px;
+	color: #fff;
+	text-decoration: none;
+	font-size: 10px;
+	border: 1px solid RGBA(94, 184, 60, 1);
+}
+.widget-items-container .widget-item-btn:hover {
+	filter: alpha(opacity=90);  
+	-moz-opacity: 0.9;   
+	opacity: 0.9; 
 }
