--- a/admin/add-ons/uixform/css/uixform.css
+++ b/admin/add-ons/uixform/css/uixform.css
@@ -1155,7 +1155,7 @@
 
 
 .uixform-color-selector-toggles .wp-picker-container .wp-color-result {	
-	background-image: url(../../images/color-bg-3.png);
+	background-image: url(../images/color-bg-3.png);
 	background-repeat: no-repeat;
 	z-index: 559901;
 }
