--- a/uix-pagebuilder-sections/css/uix-pagebuilder.css
+++ b/uix-pagebuilder-sections/css/uix-pagebuilder.css
@@ -11,8 +11,9 @@
 	---------------------------
 	
 	1. Basic
-	2. Container    
-	3. Author Card  
+	2. Container   
+	3. Section Styles    
+	4. Author Card  
 	     
 
 
