--- a/uix-pagebuilder-sections/css/uix-pagebuilder.css
+++ b/uix-pagebuilder-sections/css/uix-pagebuilder.css
@@ -229,10 +229,14 @@ img.uix-pb-img,
    3. Section Styles                               
 /* ====================================================== */
 .uix-pagebuilder-section {
-	margin: 1.5em;
+	margin: 2.5em;
 	padding: 1.5em;
 	border: #CFCFCF 1px solid;
-	background: #F6F6F6;
+	-webkit-box-shadow: 0px 0px 0px 8px rgba(230,230,230,1);
+	-moz-box-shadow: 0px 0px 0px 8px rgba(230,230,230,1);
+	box-shadow: 0px 0px 0px 8px rgba(230,230,230,1);
+	
+	
 }
 
 
