--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -1,3 +1,99 @@
+/* Elements Navigation
+-------------------------------------------------------------- */
+.uix-pagebuilder-col {
+    width: 310px;
+	float: left;
+	margin-right: 15px;
+	margin-bottom: 15px;
+	position: relative;
+
+}
+
+@media screen and (min-width: 769px) and (max-width: 1199px) {
+	.uix-pagebuilder-col {
+		width: 260px;
+	}
+}
+
+@media all and (max-width: 768px) {
+ 	.uix-pagebuilder-col {
+		width: 100%;
+	} 
+}
+
+
+
+.uix-pagebuilder-col .at-icon-box {
+    background: #18AFD3;
+    position: relative;
+    color: #fff;
+    line-height: 1;
+    top: 0;
+    transition: all 0.2s ease-out;
+    padding: 25px 20px;
+}
+
+.uix-pagebuilder-col .at-icon-box-text {
+    font-weight: 300;
+    vertical-align: middle;
+    display: table-cell;
+}
+
+.uix-pagebuilder-col .at-icon-box-text h4 {
+    font-size: 18px;
+    font-weight: 600;
+    margin: 0 0 10px 0;
+	height: 22px;
+	overflow: hidden;
+	display: block;
+}
+
+.uix-pagebuilder-col .at-icon-box-text p {
+    font-size: 12px;
+    line-height: 1.5;
+    margin-bottom: 0;
+	display: block;
+	overflow: hidden;
+	height: 60px;
+	filter: alpha(opacity=75);  
+	-moz-opacity: 0.75;   
+	opacity: 0.75; 
+
+}
+
+.uix-pagebuilder-col i.fa {
+    vertical-align: middle;
+    margin-right: 12px;
+    font-size: 20px;
+}
+
+
+.uix-pagebuilder-col a.widget-item-btn {
+    position: absolute;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+	display: block;
+	text-indent: -9999em;
+	overflow: hidden;
+	z-index: 1;
+	-moz-transition: .1s ease-in-out; 
+	-o-transition: .1s ease-in-out;
+	-webkit-transition: .1s ease-in-out; 
+	transition: .1s ease-in-out;
+}
+
+.uix-pagebuilder-col a.widget-item-btn:hover {
+	-webkit-box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.23);
+	-moz-box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.23);
+	box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.23);
+	
+}
+
+
+
+
 /* Metaboxes Style
 -------------------------------------------------------------- */
 
@@ -204,11 +300,11 @@
 
 /* Primary Module Buttons
 -------------------------------------------------------------- */
-.widget-items-container {
+.sortable-list .row .widget-items-container {
 	padding: 8px;
 }
 
-.widget-items-container .widget-item-btn {
+.sortable-list .row .widget-items-container .widget-item-btn {
 	display: inline-block;
 	margin-right: 12px;
 	background: rgba(122, 208, 58, 1);
@@ -224,14 +320,14 @@
 }
 
 
-.widget-items-container .widget-item-btn:hover {
+.sortable-list .row .widget-items-container .widget-item-btn:hover {
 	filter: alpha(opacity=90);  
 	-moz-opacity: 0.9;   
 	opacity: 0.9;
 }
 
 
-.widget-item-btn.used {
+.sortable-list .row .widget-item-btn.used {
 	display: inline-block;
 	border: none;
 	outline: none;
@@ -248,13 +344,13 @@
 	margin: 7px;
 }
 
-.widget-item-btn.used:hover {
+.sortable-list .row .widget-item-btn.used:hover {
 	filter: alpha(opacity=90);  
 	-moz-opacity: 0.9;   
 	opacity: 0.9;	
 }
 
-.widget-item-btn.used:before {
+.sortable-list .row .widget-item-btn.used:before {
 	display: inline-block;
 	content: "\f464";
 	font-family:dashicons;
