--- a/uix-pagebuilder-sections/css/uix-pagebuilder.css
+++ b/uix-pagebuilder-sections/css/uix-pagebuilder.css
@@ -654,8 +654,14 @@ img.uix-pb-img,
 /* square */
 .uix-pb-bar-box.uix-pb-bar-box-square{
 	position: relative;
-	text-align: left;
+	text-align: center;
+	height: auto;
 }
+    .uix-pb-bar-box.uix-pb-bar-box-square > div {
+		text-align: left;
+		margin: 0 auto;
+	}
+	
 	.uix-pb-bar-box.uix-pb-bar-box-square .uix-pb-bar{
 		margin: 0;
 		padding: 0;
